tests/rosetta/transpiler/C/bitmap-midpoint-circle-algorithm.error
compile failed: exit status 1: /tmp/ctranspile1212735778/bitmap-midpoint-circle-algorithm.mochi.c: In function ‘_mem’:
/tmp/ctranspile1212735778/bitmap-midpoint-circle-algorithm.mochi.c:72:12: warning: ‘mallinfo’ is deprecated [-Wdeprecated-declarations]
   72 |     struct mallinfo mi = mallinfo();
      |            ^~~~~~~~
In file included from /tmp/ctranspile1212735778/bitmap-midpoint-circle-algorithm.mochi.c:5:
/usr/include/malloc.h:114:24: note: declared here
  114 | extern struct mallinfo mallinfo (void) __THROW __MALLOC_DEPRECATED;
      |                        ^~~~~~~~
/tmp/ctranspile1212735778/bitmap-midpoint-circle-algorithm.mochi.c: In function ‘main’:
/tmp/ctranspile1212735778/bitmap-midpoint-circle-algorithm.mochi.c:163:33: error: ‘row_len’ undeclared (first use in this function); did you mean ‘g_len’?
  163 |             puts(trimRight(row, row_len));
      |                                 ^~~~~~~
      |                                 g_len
/tmp/ctranspile1212735778/bitmap-midpoint-circle-algorithm.mochi.c:163:33: note: each undeclared identifier is reported only once for each function it appears in

